--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
+  "version": 2,
   "trailingSlash": false,
+  "builds": [
+    {
+      "src": "api/main.go",
+      "use": "@vercel/go"
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
