--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,11 @@
       "src": "api/main.go",
       "use": "@vercel/go"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "api/main.go"
+    }
   ]
 }
