--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Push Coffeeder
 on:
   push:
     tags:
-      - "v*.*.*"  
+      - "v*.*.*" 
 
 jobs:
   build-and-push:
@@ -12,6 +12,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.25
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Build Go app
+        run: go build -o coffeeder main.go
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -31,6 +42,3 @@ jobs:
           tags: |
             ghcr.io/mohamaddimasprayoga1010/coffeeder:latest
             ghcr.io/mohamaddimasprayoga1010/coffeeder:${{ github.ref_name }}
-
-      - name: Image info
-        run: docker images | grep coffeeder
