--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Push Coffeeder
 on:
   push:
     tags:
-      - "v*.*.*" 
+      - "v*.*.*"  
 
 jobs:
   build-and-push:
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: 1.25
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: go mod tidy
 
       - name: Build Go app
@@ -29,16 +29,17 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and Push Docker image
+      - name: Build and Push Docker image (multi-platform)
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64,windows/amd64,windows/arm64
           tags: |
-            ghcr.io/mohamaddimasprayoga1010/coffeeder:latest
-            ghcr.io/mohamaddimasprayoga1010/coffeeder:${{ github.ref_name }}
+            ghcr.io/${{ github.actor }}/coffeeder:latest
+            ghcr.io/${{ github.actor }}/coffeeder:${{ github.ref_name }}
